# serializer version: 1
# name: test_stream_attributes_resolution[complete_series_sub_folder_season_Duck.Dodgers.S01E05.Part.A.I'm.Going.To.Get.You.Fat.Sucka.TvRip.XviD.HUN.ENG-KF.avi]
  list([
    '480p',
    'eng',
    'hun',
    'sdr',
    'theatrical',
  ])
# ---
# name: test_stream_attributes_resolution[complete_series_sub_folder_season_Duck.Dodgers.S03E06.Part.B.Corporate.Pigfall.TvRip.XviD.HUN.ENG-KF.avi]
  list([
    '480p',
    'eng',
    'hun',
    'sdr',
    'theatrical',
  ])
# ---
# name: test_stream_attributes_resolution[complete_series_without_season_Muneca.Brava.E058.DTVrip.DivX.Hun-ufo.avi]
  list([
    '480p',
    'hun',
    'sdr',
    'theatrical',
  ])
# ---
# name: test_stream_attributes_resolution[complete_series_without_season_Muneca.Brava.E203.TVrip.XviD.Hun-ufo.avi]
  list([
    '480p',
    'hun',
    'sdr',
    'theatrical',
  ])
# ---
# name: test_stream_attributes_resolution[movie_superman_sample.mkv]
  list([
    '1080p',
    '7.1',
    'bluray',
    'dolby-atmos',
    'hun',
    'remux',
    'sdr',
    'theatrical',
    'truehd',
    'x264',
  ])
# ---
# name: test_stream_attributes_resolution[movie_superman_superman.2025.1080p.bluray.remux.truehd.atmos.7.1.avc.hun-trinity.mkv]
  list([
    '1080p',
    '7.1',
    'bluray',
    'dolby-atmos',
    'hun',
    'remux',
    'sdr',
    'theatrical',
    'truehd',
    'x264',
  ])
# ---
# name: test_stream_attributes_resolution[series_big_bang_theory_The.Big.Bang.Theory.S01E01.1080p.BluRay.DD5.1.x264.HUN.ENG-pcroland.mkv]
  list([
    '1080p',
    '5.1',
    'ac3',
    'bluray',
    'eng',
    'hun',
    'sdr',
    'theatrical',
    'x264',
  ])
# ---
# name: test_stream_attributes_resolution[series_big_bang_theory_The.Big.Bang.Theory.S02E01.1080p.BluRay.DD5.1.x264.HUN.ENG-pcroland.mkv]
  list([
    '1080p',
    '5.1',
    'ac3',
    'bluray',
    'eng',
    'hun',
    'sdr',
    'theatrical',
    'x264',
  ])
# ---
# name: test_stream_attributes_resolution[series_big_bang_theory_The.Big.Bang.Theory.S03E01.1080p.BluRay.DD5.1.x264.HUN.ENG-pcroland.mkv]
  list([
    '1080p',
    '5.1',
    'ac3',
    'bluray',
    'eng',
    'hun',
    'sdr',
    'theatrical',
    'x264',
  ])
# ---
# name: test_stream_attributes_resolution[series_different_file_attributes_Malcolm.in.the.Middle.S03E08.576p.NF.WEBRip.DD5.1.x264.HUN.ENG-pcroland.mkv]
  list([
    '5.1',
    '576p',
    'ac3',
    'eng',
    'hun',
    'sdr',
    'theatrical',
    'web-rip',
    'x264',
  ])
# ---
# name: test_stream_attributes_resolution[series_different_file_attributes_Malcolm.in.the.Middle.S06E16.1080p.HULU.WEB-DL.AAC2.0.H.264.HUN.ENG-pcroland.mkv]
  list([
    '1080p',
    '2.0',
    'aac',
    'eng',
    'hun',
    'sdr',
    'theatrical',
    'web-dl',
    'x264',
  ])
# ---
# name: test_stream_attributes_resolution[series_house_of_dragon_House.of.the.Dragon.S03E03.1080p.AMZN.WEB-DL.DDP5.1.Atmos.H.264.HUN.ENG-PTHD.mkv]
  list([
    '1080p',
    '5.1',
    'dolby-atmos',
    'eac3',
    'eng',
    'hun',
    'sdr',
    'theatrical',
    'web-dl',
    'x264',
  ])
# ---
# name: test_stream_attributes_resolution[series_lost_concatenated_Lost.S06E16.What.They.Died.For.1080p.BluRay.REMUX-Kataklysm.mkv]
  list([
    '1080p',
    '5.1',
    'bluray',
    'dts-hd-ma',
    'eng',
    'hun',
    'remux',
    'sdr',
    'theatrical',
    'x264',
  ])
# ---
# name: test_stream_attributes_resolution[series_lost_concatenated_Lost.S06E17E18.The.End.1080p.BluRay.REMUX-Kataklysm.mkv]
  list([
    '1080p',
    '5.1',
    'bluray',
    'dts-hd-ma',
    'eng',
    'hun',
    'remux',
    'sdr',
    'theatrical',
    'x264',
  ])
# ---
# name: test_stream_attributes_resolution[series_miraculous_[AA] Miraculous Tales of Ladybug and Cat Noir 01 [D08B55E6].mkv]
  list([
    '720p',
    'hun',
    'sdr',
    'theatrical',
    'web-dl',
  ])
# ---
# name: test_stream_attributes_resolution[series_miraculous_[AA] Miraculous Tales of Ladybug and Cat Noir 2 - 01 [F84B8E8A].mkv]
  list([
    '720p',
    'hun',
    'sdr',
    'theatrical',
    'web-dl',
  ])
# ---
# name: test_stream_attributes_resolution[series_the_boys_The.Boys.S05E01.1080p.AMZN.WEB-DL.DDP5.1.Atmos.H.264.HUN.ENG-PTHD.mkv]
  list([
    '1080p',
    '5.1',
    'dolby-atmos',
    'eac3',
    'eng',
    'hun',
    'sdr',
    'theatrical',
    'web-dl',
    'x264',
  ])
# ---
# name: test_stream_attributes_resolution[series_the_boys_The.Boys.S05E02.1080p.AMZN.WEB-DL.DDP5.1.Atmos.H.264.HUN.ENG-PTHD.mkv]
  list([
    '1080p',
    '5.1',
    'dolby-atmos',
    'eac3',
    'eng',
    'hun',
    'sdr',
    'theatrical',
    'web-dl',
    'x264',
  ])
# ---
# name: test_stream_attributes_resolution[series_the_boys_The.Boys.S05E03.1080p.AMZN.WEB-DL.DDP5.1.Atmos.H.264.HUN.ENG-PTHD.mkv]
  list([
    '1080p',
    '5.1',
    'dolby-atmos',
    'eac3',
    'eng',
    'hun',
    'sdr',
    'theatrical',
    'web-dl',
    'x264',
  ])
# ---
